<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.homeoffice.digital.sas</groupId>
    <artifactId>parentpom</artifactId>
    <version>0.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
        <!-- JaCoCo Properties -->
        <jacoco.version>0.8.7</jacoco.version>
        <!-- Sonar Properties -->
        <sonar.projectKey>callisto-JpaRest${projectKeySuffix}</sonar.projectKey>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey> 
        <sonar.projectName>callisto-JpaRest${projectKeySuffix}</sonar.projectName>
        <sonar.language>java</sonar.language>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    
    <modules>
        <module>jparest</module>
        <module>demo</module>
    </modules>

    <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
            </plugin>
        </plugins>
      </build>
</project>
